# camkes-tool

./: .gitignore  .hgignore  .licenseignore  .linkcheck-ignore.yml  .stylefilter  CHANGES  CHANGES.md  CMakeLists.txt  Findcamkes-tool.cmake  Kbuild  Kconfig  Makefile  README  README.md  VERSION  __main__.py  alltests.py  camkes-top-level.cmake  camkes.cmake  camkes.mk  camkes.sh  compatibility.yml  setup_rust_env.sh  toplevel.mk
.github/workflows/: camkes-deploy.yml  cli.yml  push.yml  test.yml  unit.yml  vm-test.yml
.reuse/: dep5
Controller/: base_controller.py  graph_controller.py
Model/: AST_Model.py  AST_creator.py  Common.py
View/: AST_Widget.py  Component_Window.py  Connection_Widget.py  Graph_Widget.py  Instance_Widget.py  Save_Option_Dialog.py  gladeASTTest.builder  gladeASTTest.glade
camkes/: __init__.py
camkes/ast/: ADLObjects.py  GenericObjects.py  IDLObjects.py  Objects.py  __init__.py  base.py  ckeywords.py  exception.py  liftedast.py  location.py  objects.py  traversal.py  type.py  types_compatible.py
camkes/format/: README.md  __init__.py  __main__.py  to_xml.py
camkes/internal/: Counter.py  DeterministicSet.py  FileSet.py  __init__.py  argumentparsing.py  cache.py  cachea.py  cacheb.py  constants.py  create_input.sql  create_output.sql  delete_inputs.sql  delete_output.sql  dictutils.py  exception.py  filehash.py  flatten_args.py  frozendict.py  hash.py  insert_input.sql  insert_output.sql  isabelle_symbols.py  isinstancefallback.py  log.py  memoization.py  mkdirp.py  profile.py  select_inputs.sql  select_output.sql  seven.py  shelf.py  strhash.py  terminal.py  version.py
camkes/lint/: __init__.py  __main__.py  checks.py
camkes/parser/: Exceptions.py  Resolution.py  __init__.py  __main__.py  base.py  camkes.g  camkestr.py  exception.py  fdtQueryEngine.py  gpioQueryEngine.py  parser.py  query.py  scope.py  stage0.py  stage1.py  stage10.py  stage2.py  stage3.py  stage4.py  stage5.py  stage6.py  stage7.py  stage8.py  stage9.py  util.py
camkes/runner/: Context.py  Filters.py  Joiner.py  NameMangling.py  Renderer.py  Transforms.py  __init__.py  __main__.py  apply.py
camkes/stubgen/: Render.py  Simplify.py  __init__.py  __main__.py  example-from.c  example-idl.camkes  example-to.c
camkes/templates/: Makefile  Template.py  __init__.py  arch-definitions.thy  arch_helpers.py  array-typedef-check.c  call-array-typedef-check.c  call-marshal-inputs.c  call-marshal-outputs.c  call-unmarshal-inputs.c  call-unmarshal-outputs.c  camkes-gen.cmake  camkesConstants.sml  capdl-spec.cdl  cdl-refine.thy  cimp-base.thy  component.debug.c  (+72 more)
camkesrust/: Cargo.toml
camkesrust/src/: lib.rs  mutex.rs
cdl-refine-tests/: README.md  ROOT.template  dataport_CDL_Refine.thy  multiclient_CDL_Refine.thy  run_tests  simple_CDL_Refine.thy
components/: README.md  components.cmake  serial.camkes  timers.camkes
docs/: .gitignore  DEBUG.md  Makefile  generate-diagrams.py  index.md
grammars/: adl.bnf  all.bnf  camkes.bnf  idl.bnf
include/: README  arch_stdio.h
libcamkescakeml/: CMakeLists.txt
libcamkescakeml/src/: args.c  camkes_init.c  exit.c  io.c  ipc.c  virtqueue.c
libsel4camkes/: CMakeLists.txt  Kbuild  Makefile  README.md
libsel4camkes/docs/: allocator.md  dataport.md  dma.md  error.md  fault.md  init.md  marshall_macros.md  msgqueue.md  pid.md  ps_io_ops_t.md  syscalls.md  timing.md  tls.md  virtqueue.md  vma.md
libsel4camkes/include/camkes/: allocator.h  buffqueue.h  buffqueue_template.h  dataport.h  dataport_caps.h  debug.h  dma.h  error.h  fault.h  init.h  interface_registration.h  io.h  irq.h  marshal.h  marshal_macros.h  msgqueue.h  msgqueue_template.h  pid.h  sel4.h  sync.h  syscalls.h  timing.h  tls.h  version.h  virtqueue.h  virtqueue_template.h  vma.h
libsel4camkes/include/camkes/gdb/: adl.h  delegate_types.h  gdb.h  serial.h
libsel4camkes/src/: allocator.c  arch_fault.h  buffqueue.c  buffqueue_template.c  dataport.c  dma.c  error.c  fault.c  interface_registration.c  io.c  irq.c  main.c  marshal.c  msgqueue.c  msgqueue_template.c  start.c  sync.c  sys_clock.c  sys_exit.c  sys_io.c  sys_io.h  sys_madvise.c  sys_morecore.c  sys_pause.c  sys_select.c  sys_signal.c  sys_socket.c  sys_thread.c  sys_uname.c  sys_yield.c  syscalls.h  tls.c  tls.lds  virtqueue.c  virtqueue_common.c  virtqueue_common.h  virtqueue_template.c  vsyscall.c
libsel4camkes/src/arch/arm/: crt0.S  dataport.c  io.c  memset.c  register_dump.c  unknown_syscall_fault.c
libsel4camkes/src/arch/ia32/: crt0.S
libsel4camkes/src/arch/riscv/: crt0.S  dataport.c  io.c  unknown_syscall_fault.c
libsel4camkes/src/arch/x86/: crt0.S  dataport.c  io.c  register_dump.c  unknown_syscall_fault.c
libsel4camkes/src/arch_include/camkes/arch/: dataport.h  io.h
libsel4camkes/src/gdb_server/: gdb.c
libsel4camkes/src/sel4_arch/aarch32/: crt0.S  register_dump.c  unknown_syscall_fault.c
libsel4camkes/src/sel4_arch/aarch64/: crt0.S  memset.c  register_dump.c  unknown_syscall_fault.c
libsel4camkes/src/sel4_arch/ia32/: crt0.S  register_dump.c  unknown_syscall_fault.c
libsel4camkes/src/sel4_arch/ia32/gdb_server/: gdb.c  serial.c
libsel4camkes/src/sel4_arch/x86_64/: crt0.S  register_dump.c  unknown_syscall_fault.c
libsel4muslccamkes/: Kbuild  Kconfig  Makefile  README
misc/: camkes-vm.txt  camkes.nanorc  camkes.vim  idl4.nanorc  idl4.vim
object_sizes/: object_sizes.yaml
src/: sys_clock.c  sys_exit.c  sys_io.c  sys_io.h  sys_morecore.c  sys_socket.c  sys_stubs.c  sys_thread.c  syscalls.h  vsyscall.c
tests/: Makefile  example.sh  importable.sh  interface-and-component.camkes  minimal-assembly.adl  pylint.sh
tools/: camkes_lint.py  camkes_scope.py  capdl-thy-hack.pl  check_deps.py  ckeywords.c  cnode-size-playground.c  compiler-wrapper.py  generate-printer.sh  generate-type-entity-rules.sh  goanna_wrapper.py  isadump.py  jinja_lint.py  jinja_pylint.py  make_isabelle_symbols.py  sqlite-lint.c  to-bnf.py  tpp
tools/accelerator/: .gitignore  CMakeLists.txt  accelerator.c  alltests.py  mkversion.py  print-deps.py  testinterop.py  teststaticanalysis.py  testunittests.py  unittests.c
(+211 files in other folders)
