#
# Copyright 2018, Data61
# Commonwealth Scientific and Industrial Research Organisation (CSIRO)
# ABN 41 687 119 230.
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(DATA61_BSD)
#

[package]
name = "camkesrust"
version = "0.1.0"
authors = ["Kent McLeod <Kent.Mcleod@data61.csiro.au>"]

[dependencies]

[replace]
"libc:0.2.40" = { git = 'https://github.com/GaloisInc/rs_liblibc.git' }

